# esphome-build-server

./: .gitignore  Dockerfile  TODO.md  celery_worker.py  config.ini  docker-compose.yaml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  app_config.py  celery_app.py  jobs.py  jobs_state.py  main.py  redis_db.py  routes.py  services.py
app/routers/: jobs.py
docker/: esphome-compile-with-ccache.sh  inject_ccache.py  inject_ccache_wrapper.py  platformio_ccache.ini
test-project/: secrets.yaml  tester.yaml  tester2.yaml  tester3.yaml
