[project]
name = "esphome-build-server"
version = "0.1.0"
authors = [
    {name = "Patrick Jones", email = "patrickjones.pmj@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.30",
    "celery>=5.6.2",
    "esphome>=2025.12.7",
    "fastapi[all]>=0.128.0",
    "uvicorn>=0.34.3",
    "flask>=3.1.2",
    "idf-component-manager>=2.4.5",
    "kombu>=5.6.2",
    "platformio>=6.1.18",
    "redis>=7.1.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
